--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       Hey
       <span id="name"></span>
     </h1>
-    <p class="two" id="greetingText">I really like your name btw!</p>
+    <p class="two" id="greetingText">Happy Birthday!</p>
   </div>
   <div class="three">
     <p>It's your birthday!!! :D</p>
@@ -64,7 +64,7 @@
     <img src="img/hat.svg" alt="" class="hat" />
     <div class="wish">
       <h3 class="wish-hbd">Happy Birthday!</h3>
-      <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+      <h5 id="wishText">Happy Birthday from me to you</h5>
     </div>
   </div>
   <div class="seven">
